2001-05-06  Andreas Jaeger  <aj@suse.de>

	* sysdeps/i386/fpu/e_fmodl.c: New, rewrite of e_fmodl.S.
	* sysdeps/i386/fpu/e_fmodl.S: Removed.
	* sysdeps/i386/fpu/e_atan2l.c: New, rewrite of e_atan2l.S.
	* sysdeps/i386/fpu/e_atan2l.S: Removed.
	* sysdeps/i386/fpu/e_acosl.c: New, rewrite of e_acos.S.
	* sysdeps/i386/fpu/s_atanl.c: New, rewrite of e_atanl.S.
	* sysdeps/i386/fpu/e_sqrtl.c: New, rewrite of e_sqrt.S.
	* sysdeps/i386/fpu/e_acosl.S: Removed.
	* sysdeps/i386/fpu/s_atanl.S: Removed.
	* sysdeps/i386/fpu/e_sqrtl.S: Removed.

2001-05-05  Mark Kettenis  <kettenis@gnu.org>

	* sysdeps/mach/hurd/bits/environments.h: Add comment from
	sysdeps/generic/bits/environments.h.  Define _POSIX_V6_* values.

2001-04-30  Jakub Jelinek  <jakub@redhat.com>

	* posix/confstr.c (confstr) [_CS_V6_WIDTH_RESTRICTED_ENVS]: Move so
	that _CS_LFS_CFLAGS can fall through to the empty returned string
	case.  Add FALLTHROUGH comment.

2001-04-29  Ralf Baechle  <ralf@gnu.org>

	* sysdeps/unix/sysv/linux/mips/bits/sem.h: Make structure
	definitions match the kernel definitions.
	* sysdeps/unix/sysv/linux/mips/bits/ipc.h: Likewise.
	* sysdeps/unix/sysv/linux/mips/bits/shm.h: Likewise.

2001-04-29  Ben Collins  <bcollins@debian.org>

	* sysdeps/sparc/sparc64/dl-machine.h: Fix multiline strings
	warnings.
	* sysdeps/sparc/sparc64/soft-fp/qp_add.c: Likewise.
	* sysdeps/sparc/sparc64/soft-fp/qp_cmp.c: Likewise.
	* sysdeps/sparc/sparc64/soft-fp/qp_cmpe.c: Likewise.
	* sysdeps/sparc/sparc64/soft-fp/qp_div.c: Likewise.
	* sysdeps/sparc/sparc64/soft-fp/qp_dtoq.c: Likewise.
	* sysdeps/sparc/sparc64/soft-fp/qp_feq.c: Likewise.
	* sysdeps/sparc/sparc64/soft-fp/qp_fge.c: Likewise.
	* sysdeps/sparc/sparc64/soft-fp/qp_fgt.c: Likewise.
	* sysdeps/sparc/sparc64/soft-fp/qp_fle.c: Likewise.
	* sysdeps/sparc/sparc64/soft-fp/qp_flt.c: Likewise.
	* sysdeps/sparc/sparc64/soft-fp/qp_fne.c: Likewise.
	* sysdeps/sparc/sparc64/soft-fp/qp_mul.c: Likewise.
	* sysdeps/sparc/sparc64/soft-fp/qp_qtod.c: Likewise.