@@ -1,3 +1,13 @@
+2001-05-07  Andreas Jaeger  <aj@suse.de>
+
+	* debug/Makefile ($(objpfx)xtrace): Substitute @SLIBDIR@ instead
+	of @LIBDIR@.
+
+2001-05-04  H.J. Lu  <hjl@gnu.org>
+
+	* malloc/Makefile ($(objpfx)memusage): Substitute @SLIBDIR@
+	not @LIBDIR@.
+
 2001-05-06  Andreas Jaeger  <aj@suse.de>
 
 	* sysdeps/i386/fpu/e_fmodl.c: New, rewrite of e_fmodl.S.
